--- a/css/main.css
+++ b/css/main.css
@@ -121,3 +121,15 @@ form input[type="text"]{
     margin: 0.5rem 0;
     outline: none;
 }
+form input[type="email"]{
+    width:100%; 
+    padding: 0.5rem 0.7rem;
+    margin: 0.5rem 0;
+    outline: none;
+}
+form input[type="password"]{
+    width:100%; 
+    padding: 0.5rem 0.7rem;
+    margin: 0.5rem 0;
+    outline: none;
+}
