--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body{
-	background: rgba(238, 160, 146, 0.993) !important;
+	background: rgba(60, 99, 99, 0.993) !important;
 }
 
 .navbar{
@@ -98,7 +98,7 @@ body{
 }
 
 #start-button{
-	background: #107DA0;	
+	background: #0e2e38;	
 	color: white;
 	border: 0;
 	padding: 5px 15px;
